# MitPlan

./: .env.example  .env.production.example  .firebaserc  .gitignore  CLAUDE.md  Events - Red Hot and Deep Blue Savage  Kill   (1223 PM) - Report AAC Heavyweight  FF Logs (1).csv  Events - Red Hot and Deep Blue Savage  Kill   (1223 PM) - Report AAC Heavyweight  FF Logs (2).csv  Events - Red Hot and Deep Blue Savage  Kill   (1223 PM) - Report AAC Heavyweight  FF Logs.csv  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  TIMELINE_FEATURE_CHECKLIST.md  TIMELINE_FEATURE_SUMMARY.md  TIMELINE_PLAN_WORKFLOW_CHANGES.md  cors.json  database.rules.json  deploy-firebase.sh  eslint.config.js  eventTimelineStatice1.json  eventTimelineStatice2.json  firebase.json  firestore.indexes.json  firestore.rules  index.html  login_screenshot.cjs  package-lock.json  package.json  playwright.config.js  screenshot.cjs  screenshot2.cjs  server.cjs  storage.rules  test-extract-tidal-roar.js  timeline_screenshot.cjs  timeline_screenshot2.cjs  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.js  (+1 more)
docs/: SECURITY.md  (+2 more)
scripts/timeline-scraper-py/: .env.example  README.md  __init__.py  config.py  pyproject.toml  run_tests.py  test_aggregator.py  test_cactbot.py  test_cactbot_standalone.py  test_fflogs.py  test_variant_detector.py
scripts/timeline-scraper-py/agents/: __init__.py  aggregator_agent.py  base.py  cactbot_agent.py  cactbot_agent_atomic.py  correlation_agent.py  damage_extractor_agent.py  fflogs_agent.py  fflogs_agent_direct.py  orchestrator.py  timeline_builder_agent.py  (+1 more)
(+787 files in other folders)
