[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mitplan-timeline-scraper"
version = "2.0.0"
description = "FFXIV timeline scraper using atomic agents - fetches from Cactbot and FFLogs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "MitPlan Contributors", email = "mitplan@example.com"}
]
dependencies = [
    "atomic-agents>=2.0.0",
    "instructor>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "tqdm>=4.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
ollama = ["ollama>=0.1.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
]

[project.scripts]
mitplan-timeline = "cli.main:main"

[project.urls]
Homepage = "https://github.com/MitPlan/timeline-scraper"

[tool.setuptools.packages.find]
include = ["agents*", "schemas*", "tools*", "cli*"]

[tool.setuptools]
py-modules = ["config"]
